; ModuleID = '/home/carl/AnghaBench/git/extr_unix-socket.c_unix_stream_connect.c'
source_filename = "/home/carl/AnghaBench/git/extr_unix-socket.c_unix_stream_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_un = type { i32 }
%struct.unix_sockaddr_context = type { i32 }
%struct.sockaddr = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unix_stream_connect(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.sockaddr_un, align 4
  %7 = alloca %struct.unix_sockaddr_context, align 4
  store i8* %0, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @unix_sockaddr_init(%struct.sockaddr_un* %6, i8* %8, %struct.unix_sockaddr_context* %7)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %28

12:                                               ; preds = %1
  %13 = call i32 (...) @unix_stream_socket()
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = bitcast %struct.sockaddr_un* %6 to %struct.sockaddr*
  %16 = call i64 @connect(i32 %14, %struct.sockaddr* %15, i32 4)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  br label %22

19:                                               ; preds = %12
  %20 = call i32 @unix_sockaddr_cleanup(%struct.unix_sockaddr_context* %7)
  %21 = load i32, i32* %4, align 4
  store i32 %21, i32* %2, align 4
  br label %28

22:                                               ; preds = %18
  %23 = load i32, i32* @errno, align 4
  store i32 %23, i32* %5, align 4
  %24 = call i32 @unix_sockaddr_cleanup(%struct.unix_sockaddr_context* %7)
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @close(i32 %25)
  %27 = load i32, i32* %5, align 4
  store i32 %27, i32* @errno, align 4
  store i32 -1, i32* %2, align 4
  br label %28

28:                                               ; preds = %22, %19, %11
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @unix_sockaddr_init(%struct.sockaddr_un*, i8*, %struct.unix_sockaddr_context*) #1

declare dso_local i32 @unix_stream_socket(...) #1

declare dso_local i64 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @unix_sockaddr_cleanup(%struct.unix_sockaddr_context*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
